--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 ---
 language: ruby
 sudo: required
-dist: trusty
+dist: xenial
 rvm:
-- 2.2
 - 2.3.8
-- 2.4.5
-- 2.5.3
+- 2.4.6
+- 2.5.5
+- 2.6.3
 - ruby-head
 - rubinius-3
 - rubinius-2
