--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 ---
 language: ruby
 sudo: required
+cache: bundler
 dist: xenial
 rvm:
 - 2.3.8
-- 2.4.6
-- 2.5.5
-- 2.6.3
+- 2.4.9
+- 2.5.8
+- 2.6.6
+- 2.7.1
 - ruby-head
 - rubinius-3
 - rubinius-2
