--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 language: ruby
 cache: bundler
-dist: xenial
+dist: bionic
 rvm:
 - 2.4.9
 - 2.5.8
@@ -9,15 +9,9 @@ rvm:
 - 2.7.2
 - 3.0.0
 - ruby-head
-- rbx-5
-- rbx-4
-- rbx-3
 matrix:
   allow_failures:
   - rvm: ruby-head
-  - rvm: rbx-5
-  - rvm: rbx-4
-  - rvm: rbx-3
 notifications:
   email: false
 deploy:
